--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,36 @@
 <h1>Sign Up Below:</h1>
+<form action="/registrations" method="post">
+  <ul>
+    <li>
+      <label for="name">Name:</label>
+      <input type="text" name="name">
+    </li>
+    <li>
+      <label for="email">Email:</label>
+      <input type="text" name="email">
+    </li>
+    <li>
+      <label for="password">Password:</label>
+      <input type="text" name="password">
+    </li>
+  </ul>
+  <input type="submit" name="submit" value="Sign Up" id="submit">
+</form>
 
 
+
+<!-- <h1>sign up below:</h1>
+
+<form action='/registrations' method="POST">
+  <label>name</label>
+  <br/>
+  <input type="text" name="name">
+  <label>email</label>
+  <br/>
+  <input type="text" name="email">
+  <br/>
+  <label>password</label>
+  <br/>
+  <input type="password" name="password">
+  <input type="submit" value="Sign Up">
+</form> -->
