--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,19 @@
-<h1>Sign Up Below:</h1>
-
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Sign Up</title>
+  </head>
+  <body>
+    <h1>Sign Up Below:</h1>
+      <form action='/registrations' method="post">
+          <label for="name">User Name: </label>
+          <input type="text" id="name" name= "name"/><br>
+          <label for="email">Email: </label>
+          <input type="text" id="email" name= "email"><br>
+          <label for="password">Password: </label>
+          <input type="text" id="password" name= "password"><br>
+          <button id="submit" type="submit">Sign Up</button>
+        </form>
+  </body>
+  </html>
