--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,7 @@
 <h1>Sign Up Below:</h1>
-
-
+<form action="/registrations" method="post">
+  Name: <input id="name" type="text" name="name">
+  Email: <input id="email" type="text" name="email">
+  Password: <input id="password" type="text" name="password">
+  <button id="submit" type="submit">Sign Up</button>
+</form>
