--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,7 @@
 <h1>Sign Up Below:</h1>
-
-
+<form method="POST" action="/registrations">
+  <p>Name: <input type="text" id="name" name="name"></p>
+  <p>Email: <input type="text" id="email" name ="email"></input></p>
+  <p>Password: <input type="text" id="password" name="password"></input></p>
+  <input type="submit" value="Sign Up">
+</form>
